--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "github-markdown-css": "^2.10.0",
+    "marked": "^0.3.12",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
   },
