--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "filesaver.js": "^1.3.4",
     "github-markdown-css": "^2.10.0",
     "highlightjs": "^9.10.0",
     "marked": "^0.3.12",
     "vue": "^2.5.2",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "vuetify": "^0.17.7"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
